Reference Implementation/Assignment2/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     program -> function program
Rule 3     function -> MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE
Rule 4     fbody -> statement
Rule 5     fbody -> statement fbody
Rule 6     statement -> assignment
Rule 7     statement -> declaration
Rule 8     declaration -> TYPE dlist1 SEMICOLON
Rule 9     dlist1 -> NAME
Rule 10    dlist1 -> NAME COMMA dlist1
Rule 11    dlist1 -> specialvar
Rule 12    dlist1 -> specialvar COMMA dlist1
Rule 13    specialvar -> TIMES specialvar
Rule 14    specialvar -> TIMES NAME
Rule 15    assignment -> assignment_base SEMICOLON
Rule 16    assignment_base -> TIMES pointervar EQUALS expression
Rule 17    assignment_base -> NAME EQUALS expression
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression DIVIDE expression
Rule 21    expression -> expression TIMES expression
Rule 22    expression -> TIMES expression
Rule 23    expression -> MINUS expression
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> NUMBER
Rule 26    expression -> pointervar
Rule 27    pointervar -> TIMES pointervar
Rule 28    pointervar -> ADDROF pointervar
Rule 29    pointervar -> NAME

Terminals, with rules where they appear

ADDROF               : 28
COMMA                : 10 12
DIVIDE               : 20
EQUALS               : 16 17
LBRACE               : 3
LPAREN               : 3 24
MAINTYPE             : 3
MINUS                : 19 23
NAME                 : 3 9 10 14 17 29
NUMBER               : 25
PLUS                 : 18
RBRACE               : 3
RPAREN               : 3 24
SEMICOLON            : 8 15
TIMES                : 13 14 16 21 22 27
TYPE                 : 8
error                : 

Nonterminals, with rules where they appear

assignment           : 6
assignment_base      : 15
declaration          : 7
dlist1               : 8 10 12
expression           : 16 17 18 18 19 19 20 20 21 21 22 23 24
fbody                : 3 5
function             : 1 2
pointervar           : 16 26 27 28
program              : 2 0
specialvar           : 11 12 13
statement            : 4 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (2) program -> . function program
    (3) function -> . MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE

    MAINTYPE        shift and go to state 3

    program                        shift and go to state 2
    function                       shift and go to state 1

state 1

    (1) program -> function .
    (2) program -> function . program
    (1) program -> . function
    (2) program -> . function program
    (3) function -> . MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 1 (program -> function .)
    MAINTYPE        shift and go to state 3

    program                        shift and go to state 4
    function                       shift and go to state 1

state 2

    (0) S' -> program .



state 3

    (3) function -> MAINTYPE . NAME LPAREN RPAREN LBRACE fbody RBRACE

    NAME            shift and go to state 5


state 4

    (2) program -> function program .

    $end            reduce using rule 2 (program -> function program .)


state 5

    (3) function -> MAINTYPE NAME . LPAREN RPAREN LBRACE fbody RBRACE

    LPAREN          shift and go to state 6


state 6

    (3) function -> MAINTYPE NAME LPAREN . RPAREN LBRACE fbody RBRACE

    RPAREN          shift and go to state 7


state 7

    (3) function -> MAINTYPE NAME LPAREN RPAREN . LBRACE fbody RBRACE

    LBRACE          shift and go to state 8


state 8

    (3) function -> MAINTYPE NAME LPAREN RPAREN LBRACE . fbody RBRACE
    (4) fbody -> . statement
    (5) fbody -> . statement fbody
    (6) statement -> . assignment
    (7) statement -> . declaration
    (15) assignment -> . assignment_base SEMICOLON
    (8) declaration -> . TYPE dlist1 SEMICOLON
    (16) assignment_base -> . TIMES pointervar EQUALS expression
    (17) assignment_base -> . NAME EQUALS expression

    TYPE            shift and go to state 9
    TIMES           shift and go to state 11
    NAME            shift and go to state 10

    assignment_base                shift and go to state 13
    fbody                          shift and go to state 14
    assignment                     shift and go to state 16
    declaration                    shift and go to state 15
    statement                      shift and go to state 12

state 9

    (8) declaration -> TYPE . dlist1 SEMICOLON
    (9) dlist1 -> . NAME
    (10) dlist1 -> . NAME COMMA dlist1
    (11) dlist1 -> . specialvar
    (12) dlist1 -> . specialvar COMMA dlist1
    (13) specialvar -> . TIMES specialvar
    (14) specialvar -> . TIMES NAME

    NAME            shift and go to state 18
    TIMES           shift and go to state 19

    dlist1                         shift and go to state 17
    specialvar                     shift and go to state 20

state 10

    (17) assignment_base -> NAME . EQUALS expression

    EQUALS          shift and go to state 21


state 11

    (16) assignment_base -> TIMES . pointervar EQUALS expression
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 22
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    pointervar                     shift and go to state 23

state 12

    (4) fbody -> statement .
    (5) fbody -> statement . fbody
    (4) fbody -> . statement
    (5) fbody -> . statement fbody
    (6) statement -> . assignment
    (7) statement -> . declaration
    (15) assignment -> . assignment_base SEMICOLON
    (8) declaration -> . TYPE dlist1 SEMICOLON
    (16) assignment_base -> . TIMES pointervar EQUALS expression
    (17) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 4 (fbody -> statement .)
    TYPE            shift and go to state 9
    TIMES           shift and go to state 11
    NAME            shift and go to state 10

    assignment_base                shift and go to state 13
    fbody                          shift and go to state 26
    assignment                     shift and go to state 16
    declaration                    shift and go to state 15
    statement                      shift and go to state 12

state 13

    (15) assignment -> assignment_base . SEMICOLON

    SEMICOLON       shift and go to state 27


state 14

    (3) function -> MAINTYPE NAME LPAREN RPAREN LBRACE fbody . RBRACE

    RBRACE          shift and go to state 28


state 15

    (7) statement -> declaration .

    TYPE            reduce using rule 7 (statement -> declaration .)
    TIMES           reduce using rule 7 (statement -> declaration .)
    NAME            reduce using rule 7 (statement -> declaration .)
    RBRACE          reduce using rule 7 (statement -> declaration .)


state 16

    (6) statement -> assignment .

    TYPE            reduce using rule 6 (statement -> assignment .)
    TIMES           reduce using rule 6 (statement -> assignment .)
    NAME            reduce using rule 6 (statement -> assignment .)
    RBRACE          reduce using rule 6 (statement -> assignment .)


state 17

    (8) declaration -> TYPE dlist1 . SEMICOLON

    SEMICOLON       shift and go to state 29


state 18

    (9) dlist1 -> NAME .
    (10) dlist1 -> NAME . COMMA dlist1

    SEMICOLON       reduce using rule 9 (dlist1 -> NAME .)
    COMMA           shift and go to state 30


state 19

    (13) specialvar -> TIMES . specialvar
    (14) specialvar -> TIMES . NAME
    (13) specialvar -> . TIMES specialvar
    (14) specialvar -> . TIMES NAME

    NAME            shift and go to state 32
    TIMES           shift and go to state 19

    specialvar                     shift and go to state 31

state 20

    (11) dlist1 -> specialvar .
    (12) dlist1 -> specialvar . COMMA dlist1

    SEMICOLON       reduce using rule 11 (dlist1 -> specialvar .)
    COMMA           shift and go to state 33


state 21

    (17) assignment_base -> NAME EQUALS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 39
    pointervar                     shift and go to state 38

state 22

    (27) pointervar -> TIMES . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 22
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    pointervar                     shift and go to state 40

state 23

    (16) assignment_base -> TIMES pointervar . EQUALS expression

    EQUALS          shift and go to state 41


state 24

    (28) pointervar -> ADDROF . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 22
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    pointervar                     shift and go to state 42

state 25

    (29) pointervar -> NAME .

    PLUS            reduce using rule 29 (pointervar -> NAME .)
    MINUS           reduce using rule 29 (pointervar -> NAME .)
    DIVIDE          reduce using rule 29 (pointervar -> NAME .)
    TIMES           reduce using rule 29 (pointervar -> NAME .)
    SEMICOLON       reduce using rule 29 (pointervar -> NAME .)
    RPAREN          reduce using rule 29 (pointervar -> NAME .)
    EQUALS          reduce using rule 29 (pointervar -> NAME .)


state 26

    (5) fbody -> statement fbody .

    RBRACE          reduce using rule 5 (fbody -> statement fbody .)


state 27

    (15) assignment -> assignment_base SEMICOLON .

    TYPE            reduce using rule 15 (assignment -> assignment_base SEMICOLON .)
    TIMES           reduce using rule 15 (assignment -> assignment_base SEMICOLON .)
    NAME            reduce using rule 15 (assignment -> assignment_base SEMICOLON .)
    RBRACE          reduce using rule 15 (assignment -> assignment_base SEMICOLON .)


state 28

    (3) function -> MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE .

    MAINTYPE        reduce using rule 3 (function -> MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE .)
    $end            reduce using rule 3 (function -> MAINTYPE NAME LPAREN RPAREN LBRACE fbody RBRACE .)


state 29

    (8) declaration -> TYPE dlist1 SEMICOLON .

    TYPE            reduce using rule 8 (declaration -> TYPE dlist1 SEMICOLON .)
    TIMES           reduce using rule 8 (declaration -> TYPE dlist1 SEMICOLON .)
    NAME            reduce using rule 8 (declaration -> TYPE dlist1 SEMICOLON .)
    RBRACE          reduce using rule 8 (declaration -> TYPE dlist1 SEMICOLON .)


state 30

    (10) dlist1 -> NAME COMMA . dlist1
    (9) dlist1 -> . NAME
    (10) dlist1 -> . NAME COMMA dlist1
    (11) dlist1 -> . specialvar
    (12) dlist1 -> . specialvar COMMA dlist1
    (13) specialvar -> . TIMES specialvar
    (14) specialvar -> . TIMES NAME

    NAME            shift and go to state 18
    TIMES           shift and go to state 19

    dlist1                         shift and go to state 43
    specialvar                     shift and go to state 20

state 31

    (13) specialvar -> TIMES specialvar .

    COMMA           reduce using rule 13 (specialvar -> TIMES specialvar .)
    SEMICOLON       reduce using rule 13 (specialvar -> TIMES specialvar .)


state 32

    (14) specialvar -> TIMES NAME .

    COMMA           reduce using rule 14 (specialvar -> TIMES NAME .)
    SEMICOLON       reduce using rule 14 (specialvar -> TIMES NAME .)


state 33

    (12) dlist1 -> specialvar COMMA . dlist1
    (9) dlist1 -> . NAME
    (10) dlist1 -> . NAME COMMA dlist1
    (11) dlist1 -> . specialvar
    (12) dlist1 -> . specialvar COMMA dlist1
    (13) specialvar -> . TIMES specialvar
    (14) specialvar -> . TIMES NAME

    NAME            shift and go to state 18
    TIMES           shift and go to state 19

    dlist1                         shift and go to state 44
    specialvar                     shift and go to state 20

state 34

    (25) expression -> NUMBER .

    PLUS            reduce using rule 25 (expression -> NUMBER .)
    MINUS           reduce using rule 25 (expression -> NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> NUMBER .)
    TIMES           reduce using rule 25 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 25 (expression -> NUMBER .)
    RPAREN          reduce using rule 25 (expression -> NUMBER .)


state 35

    (24) expression -> LPAREN . expression RPAREN
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 45
    pointervar                     shift and go to state 38

state 36

    (22) expression -> TIMES . expression
    (27) pointervar -> TIMES . pointervar
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 47
    pointervar                     shift and go to state 46

state 37

    (23) expression -> MINUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 48
    pointervar                     shift and go to state 38

state 38

    (26) expression -> pointervar .

    PLUS            reduce using rule 26 (expression -> pointervar .)
    MINUS           reduce using rule 26 (expression -> pointervar .)
    DIVIDE          reduce using rule 26 (expression -> pointervar .)
    TIMES           reduce using rule 26 (expression -> pointervar .)
    SEMICOLON       reduce using rule 26 (expression -> pointervar .)
    RPAREN          reduce using rule 26 (expression -> pointervar .)


state 39

    (17) assignment_base -> NAME EQUALS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . TIMES expression

    SEMICOLON       reduce using rule 17 (assignment_base -> NAME EQUALS expression .)
    PLUS            shift and go to state 49
    MINUS           shift and go to state 51
    DIVIDE          shift and go to state 52
    TIMES           shift and go to state 50


state 40

    (27) pointervar -> TIMES pointervar .

    EQUALS          reduce using rule 27 (pointervar -> TIMES pointervar .)
    PLUS            reduce using rule 27 (pointervar -> TIMES pointervar .)
    MINUS           reduce using rule 27 (pointervar -> TIMES pointervar .)
    DIVIDE          reduce using rule 27 (pointervar -> TIMES pointervar .)
    TIMES           reduce using rule 27 (pointervar -> TIMES pointervar .)
    SEMICOLON       reduce using rule 27 (pointervar -> TIMES pointervar .)
    RPAREN          reduce using rule 27 (pointervar -> TIMES pointervar .)


state 41

    (16) assignment_base -> TIMES pointervar EQUALS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 53
    pointervar                     shift and go to state 38

state 42

    (28) pointervar -> ADDROF pointervar .

    PLUS            reduce using rule 28 (pointervar -> ADDROF pointervar .)
    MINUS           reduce using rule 28 (pointervar -> ADDROF pointervar .)
    DIVIDE          reduce using rule 28 (pointervar -> ADDROF pointervar .)
    TIMES           reduce using rule 28 (pointervar -> ADDROF pointervar .)
    SEMICOLON       reduce using rule 28 (pointervar -> ADDROF pointervar .)
    RPAREN          reduce using rule 28 (pointervar -> ADDROF pointervar .)
    EQUALS          reduce using rule 28 (pointervar -> ADDROF pointervar .)


state 43

    (10) dlist1 -> NAME COMMA dlist1 .

    SEMICOLON       reduce using rule 10 (dlist1 -> NAME COMMA dlist1 .)


state 44

    (12) dlist1 -> specialvar COMMA dlist1 .

    SEMICOLON       reduce using rule 12 (dlist1 -> specialvar COMMA dlist1 .)


state 45

    (24) expression -> LPAREN expression . RPAREN
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . TIMES expression

    RPAREN          shift and go to state 54
    PLUS            shift and go to state 49
    MINUS           shift and go to state 51
    DIVIDE          shift and go to state 52
    TIMES           shift and go to state 50


state 46

    (27) pointervar -> TIMES pointervar .
    (26) expression -> pointervar .

  ! reduce/reduce conflict for PLUS resolved using rule 26 (expression -> pointervar .)
  ! reduce/reduce conflict for MINUS resolved using rule 26 (expression -> pointervar .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 26 (expression -> pointervar .)
  ! reduce/reduce conflict for TIMES resolved using rule 26 (expression -> pointervar .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 26 (expression -> pointervar .)
  ! reduce/reduce conflict for RPAREN resolved using rule 26 (expression -> pointervar .)
    PLUS            reduce using rule 26 (expression -> pointervar .)
    MINUS           reduce using rule 26 (expression -> pointervar .)
    DIVIDE          reduce using rule 26 (expression -> pointervar .)
    TIMES           reduce using rule 26 (expression -> pointervar .)
    SEMICOLON       reduce using rule 26 (expression -> pointervar .)
    RPAREN          reduce using rule 26 (expression -> pointervar .)

  ! PLUS            [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]
  ! MINUS           [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]
  ! DIVIDE          [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]
  ! TIMES           [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]
  ! SEMICOLON       [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]
  ! RPAREN          [ reduce using rule 27 (pointervar -> TIMES pointervar .) ]


state 47

    (22) expression -> TIMES expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . TIMES expression

    PLUS            reduce using rule 22 (expression -> TIMES expression .)
    MINUS           reduce using rule 22 (expression -> TIMES expression .)
    DIVIDE          reduce using rule 22 (expression -> TIMES expression .)
    TIMES           reduce using rule 22 (expression -> TIMES expression .)
    SEMICOLON       reduce using rule 22 (expression -> TIMES expression .)
    RPAREN          reduce using rule 22 (expression -> TIMES expression .)

  ! PLUS            [ shift and go to state 49 ]
  ! MINUS           [ shift and go to state 51 ]
  ! DIVIDE          [ shift and go to state 52 ]
  ! TIMES           [ shift and go to state 50 ]


state 48

    (23) expression -> MINUS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . TIMES expression

    PLUS            reduce using rule 23 (expression -> MINUS expression .)
    MINUS           reduce using rule 23 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 23 (expression -> MINUS expression .)
    TIMES           reduce using rule 23 (expression -> MINUS expression .)
    SEMICOLON       reduce using rule 23 (expression -> MINUS expression .)
    RPAREN          reduce using rule 23 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 49 ]
  ! MINUS           [ shift and go to state 51 ]
  ! DIVIDE          [ shift and go to state 52 ]
  ! TIMES           [ shift and go to state 50 ]


state 49

    (18) expression -> expression PLUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 55
    pointervar                     shift and go to state 38

state 50

    (21) expression -> expression TIMES . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 56
    pointervar                     shift and go to state 38

state 51

    (19) expression -> expression MINUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25

    expression                     shift and go to state 57
    pointervar                     shift and go to state 38

state 52

    (20) expression -> expression DIVIDE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . TIMES expression
    (23) expression -> . MINUS expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . pointervar
    (27) pointervar -> . TIMES pointervar
    (28) pointervar -> . ADDROF pointervar
    (29) pointervar -> . NAME

    TIMES           shift and go to state 36
    MINUS           shift and go to state 37
    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 34
    ADDROF          shift and go to state 24
    NAME            shift and go to state 25
